--- a/web-static/TIH-Store-Page/index.html
+++ b/web-static/TIH-Store-Page/index.html
@@ -11,11 +11,11 @@
     <!-- Header Section -->
     <header>
         <div class="container">
-            <div class="header-inner">
-                <a href="#" class="logo">
-                    <span class="logo-icon">B</span>
-                    TIH
+            <div class="logo">
+                <a href="/">
+                <img src="logo.png" alt="Company Logo">
                 </a>
+            </div>
                 <nav>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -66,7 +66,8 @@
         <!-- Filter Section -->
         <div class="filter-section">
             <div class="filter-top">
-                <select>
+                <label for="sort-options" class="visually-hidden">Sort by</label>
+                <select id="sort-options">
                     <option>Sort by: Featured</option>
                     <option>Price: Low to High</option>
                     <option>Price: High to Low</option>
