Added more images to the store page and updated the styling of the page.

--- a/web-static/TIH-Store-Page/index.html
+++ b/web-static/TIH-Store-Page/index.html
@@ -72,31 +72,39 @@
                 <button>List</button>
             </div>
         </div>
-        <div class="filter-tags">
-            <span class="filter-tag active">All Plants</span>
-            <span class="filter-tag">Indoor</span>
-            <span class="filter-tag">Outdoor</span>
-            <span class="filter-tag">Succulents</span>
-            <span class="filter-tag">Cacti</span>
-            <span class="filter-tag">Flowering</span>
-            <span class="filter-tag">Tropical</span>
-        </div>
     </div>
 
         <!-- Products Grid -->
         <section class="products-grid">
             <div class="product-card">
-                <img src="Recycled Plastic Art.jpg" alt="Monstera Deliciosa">
+                <img src="Recycled Plastic Art.jpg" alt="Plastic Art">
                 <h3>Recycled Plastic Art</h3>
                 <p class="price">$29.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="Recycled Art.png" alt="Fiddle Leaf Fig">
+                <img src="Recycled Art.png" alt="Wall Deco">
                 <h3>Recycled Art</h3>
                 <p class="price">$39.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
+            <div class="product-card">
+                <img src="Carving.jpg" alt="Wooden Art">
+                <h3>Carving</h3>
+                <p class="price">$49.99</p>
+                <button class="add-to-cart">Add to Cart</button>
+            </div>
+            <div class="product-card">
+                <img src="Painting.jpg" alt="Painting">
+                <h3>Painting</h3>
+                <p class="price">$59
+                <button class="add-to-cart">Add to Cart</button>
+            </div>
+            <div class="product-card">
+                <img src="Eco-Friendly Art.jpg" alt="Sustainable Art">
+                <h3>Eco-Friendly Art</h3>
+                <p class="price">$69
+                <button class="add-to-cart">Add to Cart</button>
         </section>
 
         <!-- Pagination -->
