--- a/web-static/TIH-Store-Page/index.html
+++ b/web-static/TIH-Store-Page/index.html
@@ -72,6 +72,15 @@
                 <button>List</button>
             </div>
         </div>
+        <div class="filter-tags">
+            <span class="filter-tag active">All Plants</span>
+            <span class="filter-tag">Indoor</span>
+            <span class="filter-tag">Outdoor</span>
+            <span class="filter-tag">Succulents</span>
+            <span class="filter-tag">Cacti</span>
+            <span class="filter-tag">Flowering</span>
+            <span class="filter-tag">Tropical</span>
+        </div>
     </div>
 
         <!-- Products Grid -->
