signup page loading

--- a/web-static/Main/homePage.html
+++ b/web-static/Main/homePage.html
@@ -339,10 +339,13 @@ class="section-p2">
     <p>Free shipping on all order</p>
   </div>
 
-
-
-
 </section>
+
+
+
+<p><a href="Signup.html">Sign up</a></p>
+<p><a href="Login.html">Log in</a></p>
+
 
 
 <section id="product2" 
