--- a/web-static/Main/Login.html
+++ b/web-static/Main/Login.html
@@ -3,24 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
-    <link rel="stylesheet" href="Login.css" />
+    <title>Log in</title>
+    <link rel="stylesheet" href="Signup.css" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    />
+
+    <script type="text/javascript" src="validation.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/dad03e859c.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
+
   <body>
     <div class="container">
-      <h2>Login</h2>
-      <form id="login-form">
-        <input type="email" id="login-email" placeholder="Email" required />
-        <input
-          type="password"
-          id="login-password"
-          placeholder="Password"
-          required
-        />
+      <h1>Log in</h1>
+      <p id="error-message"></p>
+      <form id="form">
+        <div>
+          <label for="email-input">
+            <i class="fa-solid fa-envelope"></i>
+          </label>
+          <input
+            type="email"
+            name="email"
+            id="email-input"
+            placeholder="Email"
+          />
+        </div>
+        <div>
+          <label for="password-input">
+            <i class="fa-solid fa-lock"></i>
+          </label>
+          <input
+            type="password"
+            name="password"
+            id="password-input"
+            placeholder="Password"
+          />
+        </div>
+
         <button type="submit">Login</button>
       </form>
-      <p>Don't have an account? <a href="Signup.html">Sign Up</a></p>
+      <p>New here? <a href="Signup.html">Create an account</a></p>
     </div>
-    <script src="app.js"></script>
   </body>
 </html>
