--- a/web-static/Main/Signup.html
+++ b/web-static/Main/Signup.html
@@ -9,6 +9,8 @@
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     />
+
+    <script type="text/javascript" src="validation.js" defer></script>
     <script
       src="https://kit.fontawesome.com/dad03e859c.js"
       crossorigin="anonymous"
@@ -17,67 +19,57 @@
 
   <body>
     <div class="container">
-      <h1>Sign up Here</h1>
-      <form>
-        <div class="incorrect">
+      <h1>Signup</h1>
+      <p id="error-message"></p>
+      <form id="form">
+        <div>
           <label for="firstname-input">
             <i class="fa-solid fa-user"></i>
           </label>
 
           <input
-            required
             type="text"
             name="firstname"
             id="firstname-input"
             placeholder="Firstname"
           />
         </div>
-
         <div>
           <label for="email-input">
             <i class="fa-solid fa-envelope"></i>
           </label>
-
           <input
-            required
             type="email"
             name="email"
             id="email-input"
             placeholder="Email"
           />
         </div>
-
         <div>
           <label for="password-input">
             <i class="fa-solid fa-lock"></i>
           </label>
           <input
-            required
             type="password"
             name="password"
             id="password-input"
             placeholder="Password"
           />
         </div>
-
         <div>
-          <label for="repeat-password-input">
+          <label for="password-input">
             <i class="fa-solid fa-lock"></i>
           </label>
           <input
-            re
-            quired
             type="password"
             name="repeat-password"
             id="repeat-password-input"
             placeholder="Repeat Password"
           />
         </div>
-
-        <button type="submit">Sign up now</button>
+        <button type="submit">Signup</button>
       </form>
-
-      <p>Already have an account? <a href="Login.html">Login</a></p>
+      <p>Already have an Account? <a href="login.html">login</a></p>
     </div>
   </body>
 </html>
