Update the  checkout page

--- a/web-static/Checkout-page/index.html
+++ b/web-static/Checkout-page/index.html
@@ -64,6 +64,7 @@
         </form>
     </div>
 
+    <script>
         function updateTotal() {
             let subtotal = parseFloat(document.getElementById("subtotal").innerText.replace('$', ''));
             let shipping = parseFloat(document.getElementById("shipping-cost").innerText.replace('$', ''));
