product page and shop page added

--- a/web-static/Main/Login.html
+++ b/web-static/Main/Login.html
@@ -24,7 +24,7 @@
       <form id="form">
         <div>
           <label for="email-input">
-            <i class="fa-solid fa-envelope"></i>
+            <i class="fas fa-solid fa-envelope"></i>
           </label>
           <input
             type="email"
@@ -35,7 +35,7 @@
         </div>
         <div>
           <label for="password-input">
-            <i class="fa-solid fa-lock"></i>
+            <i class="fas fa-solid fa-lock"></i>
           </label>
           <input
             type="password"
@@ -45,9 +45,14 @@
           />
         </div>
 
-        <button type="submit">Login</button>
+        <button onclick="window.location.href='../Store/store.html';">
+          Login
+        </button>
       </form>
-      <p>New here? <a href="Signup.html">Create an account</a></p>
+
+      <p class="loginp">
+        New here? <a href="Signup.html">Create an account</a>
+      </p>
     </div>
   </body>
 </html>
