--- a/web-static/Main/Signup.html
+++ b/web-static/Main/Signup.html
@@ -24,7 +24,7 @@
       <form id="form">
         <div>
           <label for="firstname-input">
-            <i class="fa-solid fa-user"></i>
+            <i class="fas fa-solid fa-user"></i>
           </label>
 
           <input
@@ -36,7 +36,7 @@
         </div>
         <div>
           <label for="email-input">
-            <i class="fa-solid fa-envelope"></i>
+            <i class="fas fa-solid fa-envelope"></i>
           </label>
           <input
             type="email"
@@ -47,7 +47,7 @@
         </div>
         <div>
           <label for="password-input">
-            <i class="fa-solid fa-lock"></i>
+            <i class="fas fa-solid fa-lock"></i>
           </label>
           <input
             type="password"
@@ -58,7 +58,7 @@
         </div>
         <div>
           <label for="password-input">
-            <i class="fa-solid fa-lock"></i>
+            <i class="fas fa-solid fa-lock"></i>
           </label>
           <input
             type="password"
@@ -67,9 +67,11 @@
             placeholder="Repeat Password"
           />
         </div>
-        <button type="submit">Signup</button>
+        <button type="submit"><a href="homePageTest.html">Sign up</a></button>
       </form>
-      <p>Already have an Account? <a href="login.html">login</a></p>
+      <p class="login-link">
+        Already have an Account? <a href="login.html"><span>Login</span></a>
+      </p>
     </div>
   </body>
 </html>
