store page adjustemnts

--- a/web-static/Store/store.html
+++ b/web-static/Store/store.html
@@ -39,9 +39,88 @@
       <h1>Shop</h1>
       <p>
         <a href="../Main/homePageTest.html">Home > </a>
-        <a class="shop" href="store.html">Shop</a>
+        <a class="" href="store.html">Shop</a>
       </p>
     </div>
+
+        <!-- Banner -->
+
+    <section id="banner" >
+
+      <div class="bannercontainer">
+
+        <div class="banner-in">
+          <div class="iconn">
+            <i class="fas fa-headset"></i>
+            
+          </div>
+          <div class="text">
+            <h5>Shop With an Expert</h5>
+            <p>
+              Get the best advice from our experts
+            </p>
+          </div>
+        </div>
+
+        <div class="banner-in">
+          <div class="iconn">
+            <i class="fas fa-truck"></i>
+            
+          </div>
+          <div class="text">
+            <h5>Free Shipping</h5>
+            <p>
+              Free shipping on all orders over $100
+            </p>
+          </div>
+        </div>
+
+        <div class="banner-in">
+          <div class="iconn">
+            <i class="fas fa-shield"></i>
+          </div>
+          <div class="text">
+            <h5>100% Aunthentic</h5>
+            <p>
+              We only sell authentic products
+            </p>
+          </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <div class="shop-controls">
       <!-- <button class="filter-btn"><i class="fas fa-bars"></i> Filter</button> -->
@@ -74,3 +153,24 @@
     </section>
   </body>
 </html>
+
+
+
+<!-- Footer -->
+
+<div class="footer">
+    <div class="footer-content">
+        <p>&copy; 2025 Transformer Innovation Hub. All rights reserved.</p>
+        <div class="footer-links">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Service</a>
+            <a href="#">Contact Us</a>
+        </div>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/share/18xL1zmd9h/ 
+"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/transformer_innovation_hub?igsh=MW50djNybmE0ZGo0bQ== "><i class="fab fa-linkedin"></i></a>
+        </div>
+    </div>
