--- a/web-static/Main/homePageTest.html
+++ b/web-static/Main/homePageTest.html
@@ -196,7 +196,7 @@
             </div>
 
             <p class="price">$998.99</p>
-            <a href="/shop" class="cart-icon">
+            <a href="../Store/store.html" class="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
             </a>
         </div>
@@ -221,7 +221,7 @@
             </div>
 
             <p class="price">$99.99</p>
-            <a href="/shop" class="cart-icon">
+            <a href="../Store/store.html" class="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
             </a>
         </div>
@@ -247,7 +247,7 @@
             </div>
 
             <p class="price">$589.99</p>
-            <a href="/shop" class="cart-icon">
+            <a href="../Store/store.html" class="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
             </a>
         </div>
@@ -271,7 +271,7 @@
             </div>
 
             <p class="price">$959.99</p>
-            <a href="/shop" class="cart-icon">
+            <a href="../Store/store.html" class="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
             </a>
         </div>
@@ -296,7 +296,7 @@
             </div>
 
             <p class="price">$998.99</p>
-            <a href="/shop" class="cart-icon">
+            <a href="../Store/store.html" class="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
             </a>
         </div>
