--- a/web-static/About Us/index.html
+++ b/web-static/About Us/index.html
@@ -44,7 +44,7 @@
                 <p>Co-Founder & Backend Developer</p>
             </div>
             <div class="team-member">
-                <img src="Henriette.jpeg" alt="Team Member">
+                <img src="Henriette.jpg" alt="Team Member">
                 <h3>Henriette Utatsineza</h3>
                 <p>Researcher & Backend Developer</p>
             </div>
