pages header edits

--- a/web-static/Store/store.html
+++ b/web-static/Store/store.html
@@ -17,13 +17,13 @@
       <div class="container">
         <nav>
           <div class="logo">
-            <img src="logo.png" alt="" />
+            <img src="../Main/Images/logo.png" alt="" />
           </div>
           <ul>
-            <li><a href="#">Home </a></li>
-            <li><a href="#">Shop</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="../Main/homePageTest.html">Home </a></li>
+            <li><a href="../Store/store.html">Shop</a></li>
+            <li><a href="../blog/index.html">Blog</a></li>
+            <li><a href="../About Us/index.html">About</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
@@ -87,37 +87,6 @@
           </div>
         </div>
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
