text edited in about and blog

--- a/web-static/Main/homePageTest.html
+++ b/web-static/Main/homePageTest.html
@@ -28,7 +28,7 @@
         <div class="icons">
           <i class="fas fa-search" id="search-btn"></i>
           <i class="fas fa-shopping-cart" id="cart-btn"></i>
-          <i class="fas fa-solid fa-user"></i>
+          <a href="../Main/Signup.html"><i class="fas fa-solid fa-user"></i></a>
         </div>
       </div>
     </header>
@@ -306,7 +306,7 @@
       
     </div>
 
-    <button class="show-more"><a href="Signup.html">Show More</a></button>
+    <button class="show-more"><a href="../Store/store.html">Show More</a></button>
 
     </div>
 
